--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ a:hover{color:#566c7f}
             <p>
                 My research interest lies broadly in <b>theoretical statistics and econometrics</b>.  </p>
             <p>
-                To junior students: I devote 30 mins weekly to chat about research and career in general. I encourage you to reach out and will prioritize underrepresented groups.</p>
+                To junior students: I devote 30 mins weekly to chatting about research and career in general. I encourage you to reach out and will prioritize underrepresented groups.</p>
         </div>
     </div>
 
