--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ a:hover{color:#566c7f}
                                     <p class="email">Email: xuelin [at] berkeley [dot] edu / <a href="https://www.linkedin.com/in/xuelin-yang-42b9451a3/">LinkedIn</a> / <a href="https://scholar.google.com/citations?user=ehOhWRwAAAAJ&hl=en">Google Scholar</a> / <a href="https://statistics.berkeley.edu/people/xuelin-yang">Berkeley profile</a> </p>
                                     <!-- / <a href="data/Xuelin_cv.pdf">CV</a> -->
                                     <p class="text">
-                                    I am a first-year Ph.D. student in <a href="https://statistics.berkeley.edu/about/overview">Statistics</a> at <a href="https://www.berkeley.edu">UC Berkeley</a>.
+                                    I am a Ph.D. student in <a href="https://statistics.berkeley.edu/about/overview">Statistics</a> at <a href="https://www.berkeley.edu">UC Berkeley</a>.
                                     Previously, I graduated from <a href="http://stanford.edu">Stanford University</a> with a Bachelor's degree in Mathematics and a concurrent Master's degree in Computer Science.  </p>
                             </div>
                     </div>
@@ -163,7 +163,7 @@ a:hover{color:#566c7f}
         <div class="main-bio-container">
             <h5 class="subtitle" style="margin-top:5px">Research</h5>
             <p>
-                My research interest lies broadly in <b>theoretical statistics and econometrics</b>.  </p>
+                My research interest lies broadly in <b>theoretical statistics and econometrics</b>. </p>
             <p>
                 To junior students: I devote 30 mins weekly to chatting about research and career in general. I encourage you to reach out and will prioritize underrepresented groups.</p>
         </div>
@@ -187,6 +187,62 @@ a:hover{color:#566c7f}
                 <span class="note">(*/†: indicates equal contribution.)</span>
             </p> -->
             <div id="main-pub-card-container" class="activated hide">
+                <span class="note">*: Equal Contribution. (&alpha;-&beta;): Alphabetical order. </span>
+
+                
+
+                <div class="pub-card" data-topic="concept-learning" data-year="2022" data-selected="true">
+                    <div class="row">
+                        <div class="col-l col-xs-12 col-lg-3">
+                            <img src="data/projects/dp_gauss.png" width="100%" />
+                        </div>
+                        <div class="col-r col-xs-12 col-lg-9">
+                            <div class="pub-card-body">
+                                <h5 class="title">Dimension-free Private Mean Estimation for Anisotropic Distributions</h5>
+                                <h6 class="authors">
+                                    (&alpha;-&beta;) with <a href="https://yuvaldagan.wordpress.com">Yuval Dagan</a>,
+                                    <a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a>,
+                                    <!-- <u>Xuelin Yang</u>,-->
+                                    <a href="https://lydiazakynthinou.com">Lydia Zakynthinou</a>,
+                                    <a href="https://sites.google.com/view/nikitazhivotovskiy/">Nikita Zhivotovskiy</a>
+                                </h6>
+                                <p class="info">
+                                    <a href="https://neurips.cc/Conferences/2024/" class="conference">NeurIPS 2024</a>
+                                    [Paper coming soon<!-- <a href="???">Paper (short version)</a> /
+                                    <a href="???">Paper (long version) --></a>]
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pub-card" data-topic="concept-learning" data-year="2024" data-selected="true">
+                    <div class="row">
+                        <div class="col-l col-xs-12 col-lg-3">
+                            <img src="data/projects/nash_bi-level.png" width="100%" />
+                        </div>
+                        <div class="col-r col-xs-12 col-lg-9">
+                            <div class="pub-card-body">
+                                <h5 class="title">Fairness-Aware Meta-Learning via Nash Bargaining</h5>
+                                <h6 class="authors">
+                                    <a href="https://www.yi-zeng.com">Yi Zeng</a>*,
+                                    <u>Xuelin Yang</u>*,
+                                    <a>Li Chen</a>,
+                                    <a href="https://cristiancanton.github.io">Cristian Canton Ferrer</a>,
+                                    <a href="http://www.jinming.tech">Ming Jin</a>,
+                                    <a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a>,
+                                    <a href="https://ruoxijia.net">Ruoxi Jia</a>
+                                </h6>
+                                <p class="info">
+                                    <a href="https://neurips.cc/Conferences/2024/" class="conference">NeurIPS 2024</a>
+                                    [<a href="https://arxiv.org/abs/2406.07029">Paper</a> /
+                                    <a href="https://github.com/reds-lab/Nash-Meta-Learning">Code</a>]
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="pub-card" data-topic="concept-learning" data-year="2022" data-selected="true">
                     <div class="row">
                         <div class="col-l col-xs-12 col-lg-3">
@@ -196,8 +252,8 @@ a:hover{color:#566c7f}
                             <div class="pub-card-body">
                                 <h5 class="title">CLEVRER-Humans: Describing Physical and Causal Events the Human Way</h5>
                                 <h6 class="authors">
-                                    <a href="https://jiayuanm.com/">Jiayuan Mao</a>*,
-                                    <u>Xuelin Yang</u>*,
+                                    <a href="https://jiayuanm.com/">Jiayuan Mao</a>*<sup>(&alpha;-&beta;)</sup>,
+                                    <u>Xuelin Yang</u>*<sup>(&alpha;-&beta;)</sup>,
                                     <a href="https://xikunzhang.github.io">Xikun Zhang</a>,
                                     <a href="https://cocolab.stanford.edu/ndg">Noah D. Goodman</a>,
                                     <a href="https://jiajunwu.com">Jiajun Wu</a>
@@ -207,7 +263,7 @@ a:hover{color:#566c7f}
                                     [<a href="https://openreview.net/pdf?id=sd1fv0g3UO1">Paper</a> /
                                     <a href="https://sites.google.com/stanford.edu/clevrer-humans">Project Page</a> /
                                     <a href="https://github.com/xyang23/CLEVRER-Humans1.0">Code</a>]
-                                    <span class="note">(*: Equal Contribution. Alphabetical order.)</span>
+                                    <!--<span class="note">(*: Equal contribution & alphabetical order.)</span>-->
                                 </p>
                             </div>
                         </div>
@@ -260,8 +316,8 @@ a:hover{color:#566c7f}
                                     <a href="https://cs.stanford.edu/people/jure/">Jure Leskovec</a>
                                 </h6>
                                 <p class="info">
-                                    <a href="https://neurips.cc/Conferences/2022/" class="conference">NeurIPS 2022</a>
-                                    & <a href="https://icml.cc/Conferences/2022" class="conference">ICML 2022</a> <a href="https://beyond-bayes.github.io">Beyond Bayes: Paths Towards Universal Reasoning Systems Workshop</a>
+                                    <a href="https://neurips.cc/Conferences/2022/" class="conference">NeurIPS 2022</a>, also presented in
+                                    <a href="https://icml.cc/Conferences/2022" class="conference">ICML 2022</a> <a href="https://beyond-bayes.github.io">Beyond Bayes: Paths Towards Universal Reasoning Systems Workshop</a>
                                     [<a href="https://arxiv.org/abs/2206.15049">Paper</a> /
                                     <a href="https://snap.stanford.edu/zeroc/">Project Page</a> / 
                                     <a href="https://github.com/snap-stanford/zeroc">Code</a>]
@@ -278,9 +334,9 @@ a:hover{color:#566c7f}
 
     <div class="main-more-container">
         <div class="main-other-container">
-            <h5 class="subtitle" style="margin-top:0px">Experience</h5>
+            <h5 class="subtitle" style="margin-top:0px">Prior Experience</h5>
             <ul>
-            <li>Research Assistant, <a href="https://statistics.stanford.edu">Stanford Statistics</a> (advised by Prof. <a href="https://tibshirani.su.domains", target="_blank">Robert Tibshirani</a>), 01/2022 – Present</li>
+            <li>Research Assistant, <a href="https://statistics.stanford.edu">Stanford Statistics</a> (advised by Prof. <a href="https://tibshirani.su.domains", target="_blank">Robert Tibshirani</a>), 01/2022 – 05/2023</li>
             <li>Research Assistant, <a href="https://www.csail.mit.edu">MIT CSAIL</a> (advised by Prof. <a href="https://people.csail.mit.edu/yoonkim/" target="_blank">Yoon Kim</a>), 06/2022 – 03/2023</li>
             <li>Research Assistant, <a href="https://ai.stanford.edu">Stanford AI Lab</a> (advised by Prof. <a href="https://jiajunwu.com", target="_blank">Jiajun Wu</a>), 06/2021 – 06/2022</li>
             <li>Research Assistant, <a href="https://snap.stanford.edu">(Stanford) SNAP</a> (advised by Prof. <a href="https://cs.stanford.edu/people/jure/", target="_blank">Jure Leskovec</a>), 09/2020 – 06/2021</li>
@@ -290,14 +346,13 @@ a:hover{color:#566c7f}
 
     <div class="main-more-container">
         <div class="main-other-container">
-            <h5 class="subtitle" style="margin-top:0px">Distinctions</h5>
+            <h5 class="subtitle" style="margin-top:0px">Selected Distinctions</h5>
             <p>
             Candidate, <b>Tau Beta Pi (TBP) Engineering Honor Society</b>, 2023 (top fifth of all seniors in the School of Engineering at Stanford based on GPA) <br>
             Second place at Stanford, <b>Jane Street Estimathon</b>, 2020 (top 2 out of 20) <br>
             3rd Place Award in System Software, <b>Intel International Science and Engineering Fair</b>, 2018 (top 10% out of 1800, state’s best record in 8 years, the world’s largest pre-college STEM competition) <br>
             First Prize, <b>Provincial Adolescent Science and Technology Innovation Contest</b>, 2018 (top 5 out of 400 in the province) <br>
-            Best High School Student of the Year, awarded by All-China Students' Federation, 2017 (top 10 out of 170k in the country) <br>
-            Bronze Award in World’s Final, <b>Shing-Tung Yau Science Award</b>, 2017 (top 0.5% out of 5800, Chinese largest STEM competition) <br>
+            Bronze Award in World’s Final, <b>Shing-Tung Yau Science Award</b>, 2017 (top 0.5% out of 5800, Chinese largest pre-college STEM competition) <br>
             Meritorious, <b>International Mathematical Modelling Challenge</b>, 2016 (top 10 out of 300 in the country)
             </p>
         </div>
