--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ a:hover{color:#566c7f}
         <div class="main-bio-container">
             <h5 class="subtitle" style="margin-top:5px">Research</h5>
             <p>
-                My research interest lies broadly in <b>theoretical statistics and econometrics</b>. </p>
+                My research interest lies broadly in <b>machine learning and econometrics</b>. </p>
             <p>
                 To junior students: I devote 30 mins weekly to chatting about research and career in general. I encourage you to reach out and will prioritize underrepresented groups.</p>
         </div>
@@ -207,9 +207,9 @@ a:hover{color:#566c7f}
                                     <a href="https://sites.google.com/view/nikitazhivotovskiy/">Nikita Zhivotovskiy</a>
                                 </h6>
                                 <p class="info">
-                                    <a href="https://neurips.cc/Conferences/2024/" class="conference">NeurIPS 2024</a>
-                                    [Paper coming soon<!-- <a href="???">Paper (short version)</a> /
-                                    <a href="???">Paper (long version) --></a>]
+                                    <a href="https://neurips.cc/Conferences/2024/" class="conference">NeurIPS 2024</a>, also presented in
+                                    <a href="https://tpdp.journalprivacyconfidentiality.org/2024/">Theory and Practice of Differential Privacy (TPDP) 2024 Workshop</a>
+                                    [<a href="https://arxiv.org/abs/2411.00775">Paper</a>] 
                                 </p>
                             </div>
                         </div>
@@ -308,7 +308,7 @@ a:hover{color:#566c7f}
                                 <h5 class="title">ZeroC: A Neuro-Symbolic Model for Zero-shot Concept Recognition and Acquisition at Inference Time</h5>
                                 <h6 class="authors">
                                     <a href="https://tailin.org">Tailin Wu</a>,
-                                    <a href="https://megantj.com">Megan Tjandrasuwita</a>,
+                                    <a href="https://megantj.github.io">Megan Tjandrasuwita</a>,
                                     <a href="https://zen-wu.social">Zhengxuan Wu</a>,
                                     <u>Xuelin Yang</u>,
                                     <a href="https://kliu.io">Kevin Liu</a>,
@@ -340,6 +340,8 @@ a:hover{color:#566c7f}
             <li>Research Assistant, <a href="https://www.csail.mit.edu">MIT CSAIL</a> (advised by Prof. <a href="https://people.csail.mit.edu/yoonkim/" target="_blank">Yoon Kim</a>), 06/2022 – 03/2023</li>
             <li>Research Assistant, <a href="https://ai.stanford.edu">Stanford AI Lab</a> (advised by Prof. <a href="https://jiajunwu.com", target="_blank">Jiajun Wu</a>), 06/2021 – 06/2022</li>
             <li>Research Assistant, <a href="https://snap.stanford.edu">(Stanford) SNAP</a> (advised by Prof. <a href="https://cs.stanford.edu/people/jure/", target="_blank">Jure Leskovec</a>), 09/2020 – 06/2021</li>
+            
+            <span class="note">I am deeply grateful to every mentor and researcher I've worked with along this journey.</span>
             </ul>
         </div>
     </div>
