--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@ a:hover{color:#566c7f}
                     <div id="main-info-container">
                             <div class="col-name">
                                     <h1 class="name"><span>Xuelin Yang</span></h1>
-                                    <p class="email">Email: xuelin [at] berkeley [dot] edu / <a href="https://www.linkedin.com/in/xuelin-yang-42b9451a3/">LinkedIn</a> / <a href="https://scholar.google.com/citations?user=ehOhWRwAAAAJ&hl=en">Google Scholar</a> / <a href="https://statistics.berkeley.edu/people/xuelin-yang">Berkeley profile</a> </p>
+                                    <p class="email">Email: xuelin [at] berkeley [dot] edu <br> <a href="https://scholar.google.com/citations?user=ehOhWRwAAAAJ&hl=en">Google Scholar</a> / <a href="https://statistics.berkeley.edu/people/xuelin-yang">Berkeley profile</a> / <a href="https://www.linkedin.com/in/xuelin-yang-42b9451a3/">LinkedIn</a> / <a href="https://x.com/xuelin_y">Twitter</a> / <a href="https://bsky.app/profile/xuelin.bsky.social">Bluesky</a></p>
                                     <!-- / <a href="data/Xuelin_cv.pdf">CV</a> -->
-                                    <p class="text">
+                                    <p class="text"> 
                                     I am a Ph.D. student in <a href="https://statistics.berkeley.edu/about/overview">Statistics</a> at <a href="https://www.berkeley.edu">UC Berkeley</a>.
                                     Previously, I graduated from <a href="http://stanford.edu">Stanford University</a> with a Bachelor's degree in Mathematics and a concurrent Master's degree in Computer Science.  </p>
                             </div>
