--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ a:hover{color:#566c7f}
         <div id="main-content-container" class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-3 col-avatar">
-                    <img src="static/img/avatar0.jpg" class="avatar" />
+                    <img src="static/img/avatar0.JPG" class="avatar" />
                 </div>
                 <div class="col-sm-12 col-md-9">
                     <div id="main-info-container">
