disable workshop paper

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ a:hover{color:#566c7f}
                         </div>
                     </div>
                 </div>
-
+<!-- 
                 <div class="pub-card" data-topic="causal-inference" data-year="2025" data-selected="false">
                     <div class="row">
                         <div class="col-l col-xs-12 col-lg-3">
@@ -232,7 +232,6 @@ a:hover{color:#566c7f}
                                     <a href="https://scholar.google.com/citations?user=OuXEBrEAAAAJ&hl=en">Niloy Biswas</a>
                                 </h6>
                                 <p class="info">
-                                    <!-- <a href="https://neurips.cc/Conferences/2024/" class="conference">NeurIPS 2024</a> -->
 
                                     <a href="https://neurips.cc/Conferences/2025" class="conference">NeurIPS 2025<a> <a href="https://sites.google.com/view/causcien">CauScien: Uncovering Causality in Science Workshop<a> [<a href="TBD">Paper coming soon.</a> /
                                     <a href="https://github.com/facebookresearch/data_decomposition">Code</a>]  
@@ -240,7 +239,7 @@ a:hover{color:#566c7f}
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
                 <div class="pub-card" data-topic="statistics" data-year="2024" data-selected="true">
