add slide for causal_cv, revise wording for author ordering

--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@ a:hover{color:#566c7f}
                 <a id="publication-by-date" href="javascript:;", onClick="publicationByDate();">show all by date</a> /
                 <a id="publication-by-topic" href="javascript:;", onClick="publicationByTopic();">show all by topic</a>)
             </h5>
-            <span class="text">*: Equal Contribution. (&alpha;-&beta;): Alphabetical order.<br></span>
+            <!-- <span class="text">*: Equal Contribution. (&alpha;-&beta;): Alphabetical order.<br></span> -->
+            <span class="text"> (&alpha;-&beta;) denotes alphabetical order. Asterisk (*) denotes equal contribution.<br></span>
            <p class="subtitle-aux" style="display: none;">
                 <span class="bold">Topics:</span>
                 <a href="#topic-causal-inference" onClick="return publicationByTopicSpecific(this)" data-topic="causal-inference">Causal Inference</a> /
@@ -211,7 +212,7 @@ a:hover{color:#566c7f}
                                     <a href="https://gsb-faculty.stanford.edu/guido-w-imbens">Guido W. Imbens</a>
                                 </h6>
                                 <p class="info">
-                                    [<a href="http://arxiv.org/abs/2511.00727">Paper</a> / <a href="https://sites.google.com/berkeley.edu/cross-validated-causal/">Project Page</a> / <a href="https://github.com/xyang23/cross_validated_causal">Code</a>] 
+                                    [<a href="http://arxiv.org/abs/2511.00727">Paper</a> / <a href="https://drive.google.com/file/d/1asNzuhcIh2DoowC5MPPBuyOef5lJCM0O/view?usp=sharing">Slide</a> / <a href="https://sites.google.com/berkeley.edu/cross-validated-causal/">Project Page</a> / <a href="https://github.com/xyang23/cross_validated_causal">Code</a>] 
                                 </p>
                             </div>
                         </div>
@@ -252,7 +253,7 @@ a:hover{color:#566c7f}
                             <div class="pub-card-body">
                                 <h5 class="title">Dimension-free Private Mean Estimation for Anisotropic Distributions</h5>
                                 <h6 class="authors">
-                                    (&alpha;-&beta;) with <a href="https://yuvaldagan.wordpress.com">Yuval Dagan</a>,
+                                    (&alpha;-&beta;), with: <a href="https://yuvaldagan.wordpress.com">Yuval Dagan</a>,
                                     <a href="https://people.eecs.berkeley.edu/~jordan/">Michael I. Jordan</a>,
                                     <!-- <u>Xuelin Yang</u>,-->
                                     <a href="https://lydiazakynthinou.com">Lydia Zakynthinou</a>,
